--- a/.gitignore
+++ b/.gitignore
@@ -33,8 +33,8 @@ bld/
 #[Ll]og/
 #[Ll]ogs/
 intermediates/
-bin-intermediates/
-bin/
+ToyRenderer-binaries/
+ToyRenderer-intermediates/
 
 # Visual Studio 2015/2017 cache/options directory
 .vs/
