continued refactoring. Added: A new shader parsing system with settings section A new shader oven that takes care of compling, linking, validation, parsing A new shader assembley, which loads all the textures, managed by resource manager, the shader class request a shader by tag name from the assembly in game runtime, Continued refactoring the GLcalls in a RHI class, refactored the Shader and shader oven

--- a/ToyRenderer/ToyRenderer.vcxproj
+++ b/ToyRenderer/ToyRenderer.vcxproj
@@ -162,6 +162,9 @@ IF EXIST $(ProjectDir)res\ (xcopy /Q /E /Y /I $(ProjectDir)res ..\ToyRenderer-bi
     <ClInclude Include="src\Components\Transform.h" />
     <ClInclude Include="src\Core.h" />
     <ClInclude Include="src\EntryPoint.h" />
+    <ClInclude Include="src\managers\ShaderAssembly.h" />
+    <ClInclude Include="src\managers\ShaderOven.h" />
+    <ClInclude Include="src\rendering\RHI\RenderingPipelineTypes.h" />
     <ClInclude Include="src\Tests\Test.h" />
     <ClInclude Include="src\Tests\TestClearColor.h" />
     <ClInclude Include="src\Tests\TestObjLoader.h" />
@@ -690,6 +693,8 @@ IF EXIST $(ProjectDir)res\ (xcopy /Q /E /Y /I $(ProjectDir)res ..\ToyRenderer-bi
     <ClCompile Include="src\Components\Scripts\MoveCamera.cpp" />
     <ClCompile Include="src\Components\Scripts\postProcesses\Vignetting.cpp" />
     <ClCompile Include="src\Components\Transform.cpp" />
+    <ClCompile Include="src\managers\ShaderAssembly.cpp" />
+    <ClCompile Include="src\managers\ShaderOven.cpp" />
     <ClCompile Include="src\Tests\Test.cpp" />
     <ClCompile Include="src\Tests\TestClearColor.cpp" />
     <ClCompile Include="src\Tests\TestObjLoader.cpp" />
